--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "i8-icon": "^0.9.4",
     "mini-css-extract-plugin": "^2.4.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-media": "^1.10.0",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.4"
   },
